--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,14 @@
     <string name="location">Location: %1$s</string>
     <string name="dimensions">Dimensions: %1$d × %2$d</string>
     <string name="original_size">Original size: %1$s</string>
+    <string name="importDescription">To import an existing album, select the file ending with .sqlite and press Import.</string>
+    <string name="import_action">Import</string>
+    <string name="album_import">Album import</string>
+    <string name="select_file">Select file</string>
+    <string name="importing">Importing ...</string>
+    <string name="invalid_database_format">File is not a valid Pocket Album</string>
+    <string name="open_file_failed">Unable to access the selected file\n</string>
+    <string name="unknown_error">Unknown error</string>
+    <string name="error_file_empty">Selected file is empty</string>
+    <string name="no_file_selected">No file selected</string>
 </resources>
