Search images by location

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="evening">Evening</string>
     <string name="night">Night</string>
     <string name="location_map">Location</string>
+    <string name="zoom_in_message">Zoom in more to filter by location</string>
 </resources>
