Adjustable thumbnail size

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="location_map">Location</string>
     <string name="zoom_in_message">Zoom in more to filter by location</string>
     <string name="display_theme">Display theme</string>
+    <string name="thumbnails_size">Thumbnails size</string>
 </resources>
