--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="info">Info</string>
     <string name="close">Close</string>
     <string name="file_name">File name: %1$s</string>
-    <string name="created">Created: %1$s</string>
+    <string name="created_template">Created: %1$s</string>
     <string name="location">Location: %1$s</string>
     <string name="dimensions">Dimensions: %1$d × %2$d</string>
     <string name="original_size">Original size: %1$s</string>
@@ -32,4 +32,9 @@
     <string name="zoom_in_message">Zoom in more to filter by location</string>
     <string name="display_theme">Display theme</string>
     <string name="thumbnails_size">Thumbnails size</string>
+    <string name="photos_count">Photos count</string>
+    <string name="file_size">File size</string>
+    <string name="year_range">Year range</string>
+    <string name="last_updated">Last updated</string>
+    <string name="created">Created</string>
 </resources>
