--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="year_range">Year range</string>
     <string name="last_updated">Last updated</string>
     <string name="created">Created</string>
+    <string name="compressed_size">Compressed size</string>
 </resources>
