--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="last_updated">Last updated</string>
     <string name="created">Created</string>
     <string name="compressed_size">Compressed size</string>
+    <string name="cast">Cast</string>
 </resources>
